--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@vercel/node": "^1.9.0",
+    "axios": "^0.21.1",
+    "mongodb": "^3.6.4",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typescript": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.6.8"
   }
 }
